[package]
name = "burncloud-code"
version = "0.1.9"
edition = "2021"
description = "Code management and execution for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "code", "execution"]
categories = ["development-tools"]

[dependencies]
burncloud-common = "0.1."
burncloud-core = "0.1.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"